[project]
name = "dantools"
version = "0.1.1-dev"
authors = [
  { name="Daniil10295", email="chernyak.daniil.2010@gmail.com" },
]
description = "dantools"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools >= 77.0.3", "colorama >= 0.4.6", "logging~=0.4.9.6"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/Daniil10295/dantools"
"Bug Tracker" = "https://github.com/Daniil10295/dantools/issues"